update: sync vector and huggingface changes